# school-mgt-api

./: .gitignore  docker-compose.yaml  main.py  pyproject.toml  seed.py
api/: v1.py
dto/student/: createStudent.py  updateStudent.py
lib/db/: database.py
lib/entityRepository/: repository.py
lib/exceptions/: app_exception.py  bad_request.py  internal_server_error.py  not_found.py
model/: student.py
models/: student.py
module/student/: router.py
repository/: student.py
router/: student.py
routers/: student.py
service/: student.py
