[tool.poetry]
name = "schoolmanagementapi"
version = "0.1.0"
description = ""
authors = ["MuhammadAbyaz <m.abyaz681@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
pymongo = "^4.8.0"
pydantic = "^2.8.2"
pymongoose = "^1.3.8"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
